🔥 不要なコード・機能を削除

--- a/app/views/products/_products.erb
+++ b/app/views/products/_products.erb
@@ -5,8 +5,8 @@
       <div class="card h-100">
         <%= link_to(product_path(product), class: 'text-dark text-decoration-none') do %>
           <!-- Product image-->
-          <% if product.images.attached? %>
-            <%= image_tag(product.images[0].variant(resize_to_fill: [450, 300]).processed, class: "card-img-top") %>
+          <% if product.image.attached? %>
+            <%= image_tag(product.image_as_thumbnails, class: "card-img-top") %>
           <% else %>
             <%= image_tag("https://dummyimage.com/450x300/dee2e6/6c757d.jpg", class: "card-img-top") %>
           <% end %>
