--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,13 +4,21 @@
     <%= link_to 'ホーム', root_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <form class="d-flex">
-        <button class="btn btn-outline-dark" type="submit">
+
+      <%= link_to cart_path, class: 'd-flex', style:"text-decoration: none;" do %>
+        <button class="btn btn-outline-dark" type="button">
           <i class="bi-cart-fill me-1"></i>
-          Cart
-          <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+          カート
+          <span class="badge bg-dark text-white ms-1 rounded-pill"><%= @cart.cart_items.count %></span>
         </button>
-      </form>
+      <% end %>
+
+      <%# Flash通知 %>
+      <% flash.each do |message_type, message| %>
+      <span style="margin-left: 1rem"><%= message %></span>
+      <% end %>
     </div>
+      <%# デバッグ用 %>
+      <%= link_to @cart.id, cart_path(), class: 'text-dark text-decoration-none fw-bolder' %>
   </div>
 </nav>
