--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,40 +1,36 @@
 <!-- Product section-->
 <section class="py-5">
-  <div class="container px-4 px-lg-5 mt-5">
-    <section class="py-5">
-        <div class="container px-4 px-lg-5 my-5">
-            <div class="row gx-4 gx-lg-5 align-items-center">
-                <div class="col-md-6">
-                <% if @product.image.present? %>
-                  <%= image_tag(@product.image_as_thumbnail, class: "card-img-top mb-5 mb-md-0") %>
-                <% else %>
-                  <img class="card-img-top mb-5 mb-md-0" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." />
-                <% end %>
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="row gx-4 gx-lg-5 align-items-center">
+            <div class="col-md-6">
+            <% if @product.image.present? %>
+              <%= image_tag(@product.image_as_thumbnail, class: "card-img-top mb-5 mb-md-0") %>
+            <% else %>
+              <img class="card-img-top mb-5 mb-md-0" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." />
+            <% end %>
+            </div>
+            <div class="col-md-6">
+                <h1 class="display-5 fw-bolder"><%= @product.name %></h1>
+                <div class="fs-5 mb-5">
+                    <span><%= number_to_currency(@product.price) %></span>
                 </div>
-                <div class="col-md-6">
-                    <h1 class="display-5 fw-bolder"><%= @product.name %></h1>
-                    <div class="fs-5 mb-5">
-                        <span><%= number_to_currency(@product.price) %></span>
-                    </div>
-                    <p class="lead"><%= @product.description %></p>
+                <p class="lead"><%= @product.description %></p>
+
+                  <%= form_with(url: cart_items_path, method: :post) do |form| %>
                     <div class="d-flex">
-                        <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
-                        <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                            <i class="bi-cart-fill me-1"></i>
-                            カートに入れる
-                        </button>
+                      <%= form.hidden_field :product_id, value: @product.id %>
+                      <%= form.number_field :quantity, value: 1, min: 1, class: "form-control text-center me-3", style: "max-width: 5rem" %>
+                      <%= form.submit "カートに追加", class:"btn btn-outline-dark flex-shrink-0" %>
                     </div>
-                </div>
+                  <% end %>
             </div>
         </div>
-    </section>
-
-    <!-- Related items section-->
-    <section class="py-5 bg-light">
-        <div class="container px-4 px-lg-5 mt-5">
-            <h2 class="fw-bolder mb-4">関連の商品</h2>
-            <%= render partial: 'products', locals: {products: @products} %>
-        </div>
-      </section>
+    </div>
+</section>
+<!-- Related items section-->
+<section class="py-5 bg-light">
+  <div class="container px-4 px-lg-5 mt-5">
+      <h2 class="fw-bolder mb-4">関連の商品</h2>
+      <%= render partial: 'products', locals: {products: @products} %>
   </div>
 </section>
