--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,10 +15,9 @@
 
       <%# Flash通知 %>
       <% flash.each do |message_type, message| %>
-      <span style="margin-right: 1rem"><%= message %></span>
+      <span style="margin-left: 1rem"><%= message %></span>
       <% end %>
     </div>
-      <%# デバッグ用 %>
       <%= link_to '購入明細一覧', orders_path %>
   </div>
 </nav>
