--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -23,126 +23,29 @@
         </li>
       <% end %>
       <%# 割引コード %>
-      <%# <li class="list-group-item d-flex justify-content-between lh-sm">
-        <div>
-          <h6 class="my-0">Third item</h6>
-          <small class="text-body-secondary">Brief description</small>
-        </div>
-        <span class="text-body-secondary">$5</span>
-      </li> %>
+      <% if @cart.promotion_code.present? %>
+        <li class="list-group-item d-flex justify-content-between bg-body-tertiary">
+          <div class="text-success">
+            <h6 class="my-0">Promo code</h6>
+            <small><%= @cart.promotion_code.code %></small>
+          </div>
+          <span class="text-success">−<%= number_to_currency(@cart.promotion_code.discount) %></span>
+        </li>
+      <% end %>
+
       <li class="list-group-item d-flex justify-content-between">
         <span>合計</span>
-        <strong><%= "#{number_to_currency(total_price)}" %></strong>
+        <strong><%= "#{number_to_currency(total_price - (@cart.promotion_code&.discount || 0))}" %></strong>
       </li>
     </ul>
 
-    <form class="card p-2">
+    <%= form_with url: apply_promo_code_path, method: :post, class: "card p-2" do |f| %>
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Promo code">
-        <button type="submit" class="btn btn-secondary">Redeem</button>
+        <%= f.text_field :code, class: "form-control", placeholder: "Promo code" %>
+        <%= f.submit "適用", class: "btn btn-secondary" %>
       </div>
-    </form>
-  </div>
-
-  <div class="col-md-7 col-lg-8">
-    <h4 class="mb-3">請求先住所</h4>
-    <%= form_with(url: orders_path, method: :post, class: "needs-validation", novalidate: true) do |form| %>
-    <%= form.hidden_field :cart_id, value: @cart.id %>
-
-
-      <div class="row g-3">
-        <div class="col-sm-6">
-          <%= form.label :family_name, "姓*", class: 'form-label' %>
-          <%= form.text_field :family_name, class: 'form-control', required: true %>
-          <div class="invalid-feedback">
-            Valid first name is required.
-          </div>
-        </div>
-
-        <div class="col-sm-6">
-          <%= form.label :given_name, "名*", class: 'form-label' %>
-          <%= form.text_field :given_name, class: 'form-control', required: true %>
-          <div class="invalid-feedback">
-            Valid last name is required.
-          </div>
-        </div>
-
-        <div class="col-12">
-          <%= form.label :email, "メールアドレス*", class: 'form-label' %>
-          <%= form.email_field :email, class: 'form-control', required: true %>
-          <div class="invalid-feedback">
-            Please enter a valid email address for shipping updates.
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <%= form.label :postal_code, "郵便番号*", class: 'form-label' %>
-          <%= form.text_field :postal_code, class: 'form-control', required: true %>
-          <div class="invalid-feedback">
-            Zip code required.
-          </div>
-        </div>
-
-        <div class="col-12">
-          <%= form.label :address1, "住所 1*", class: 'form-label' %>
-          <%= form.text_field :address1, class: 'form-control', required: true %>
-          <div class="invalid-feedback">
-            Please enter your shipping address.
-          </div>
-        </div>
-
-        <div class="col-12">
-          <%= form.label :address2, "住所 2 <span class='text-body-secondary'>(任意)</span>".html_safe, class: 'form-label' %>
-          <%= form.text_field :address2, class: 'form-control' %>
-        </div>
-      </div>
-
-      <hr class="my-4">
-
-      <h4 class="mb-3">支払い情報</h4>
-
-      <div class="my-3">
-        <div class="form-check">
-          <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
-          <label class="form-check-label" for="credit">クレジットカード</label>
-        </div>
-      </div>
-
-      <div class="row gy-3">
-        <div class="col-md-6">
-          <%= form.label :card_name, "カード名義", class: 'form-label' %>
-          <%= form.text_field :card_name, class: 'form-control', required: true %>
-          <div class="invalid-feedback">
-            Name on card is required
-          </div>
-        </div>
-        <div class="col-md-6">
-          <%= form.label :card_number, "カード番号", class: 'form-label' %>
-          <%= form.text_field :card_number, class: 'form-control', required: true %>
-          <div class="invalid-feedback">
-            Credit card number is required
-          </div>
-        </div>
-        <div class="col-md-3">
-          <%= form.label :card_expire, "期限", class: 'form-label' %>
-          <%= form.text_field :card_expire, class: 'form-control', required: true %>
-          <div class="invalid-feedback">
-            Expiration date required
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <%= form.label :card_cvv, "CVV", class: 'form-label' %>
-          <%= form.text_field :card_cvv, class: 'form-control', required: true %>
-          <div class="invalid-feedback">
-            Security code required
-          </div>
-        </div>
-      </div>
-      <hr class="my-4">
-      <%= form.submit "購入する", class: "w-100 btn btn-primary btn-lg" %>
     <% end %>
-
-
   </div>
+
+  <%= render partial: 'carts/form' %>
 </div>
